--- a/views/add/addBebidas.handlebars
+++ b/views/add/addBebidas.handlebars
@@ -39,35 +39,46 @@
             <!-- ============================================================== -->
             <!-- basic form -->
             <!-- ============================================================== -->
-            <form action="/addProd/addProdEstoque" method="post">
+            <form action="/add/bebidas" method="post">
                 <div class="row">
 
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="card">
                             <h5 class="card-header">Cadastro Bebidas</h5>
                             <div class="card-body">
-                                <form id="form" data-parsley-validate="" novalidate="">
+                                <form id="form" data-parsley-validate="" novalidate="">                                    
                                     <div class="form-group">
-                                        <label for="codAperitivo">Código do Bebida</label>
-                                        <input type="text" name="codAperitivo" id="codAperitivo" class="form-control"
-                                            placeholder="Digite o código do Aperitivo">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="nomeAperitivo">Nome do Bebida</label>
-                                        <input type="text" name="nomeAperitivo" id="nomeAperitivo" class="form-control"
+                                        <label for="nome">Nome do Bebida</label>
+                                        <input type="text" name="nome" id="nome" class="form-control"
                                             placeholder="Digite o nome do Aperitivo">
                                     </div>
                                     <div class="form-group">
-                                        <label for="descAperitivo">Descrição do Bebida</label>
-                                        <textarea name="descAperitivo" id="descAperitivo" cols="30" rows="10"
-                                            class="form-control"
-                                            placeholder="Digite a descrição deste aperitivo"></textarea>
+                                        <label for="quantidade">Quantidade em Litros</label>
+                                        <input type="text" name="quantidade" id="quantidade" class="form-control"
+                                            placeholder="Digite o a quantidade em litros da bebida">
                                     </div>
                                     <div class="form-group">
-                                        <label for="valorAperitivo">Valor Bebida</label>
-                                        <input type="text" name="valorAperitivo" id="valorAperitivo"
-                                            class="form-control" placeholder="Digite o valor do Aperitivo">
+                                        <label for="valorCompra">Valor Compra</label>
+                                        <input type="text" name="valorCompra" id="valorCompra"
+                                            class="form-control" placeholder="Digite o valor de compra da bebida">
                                     </div>
+                                    <div class="form-group">
+                                        <label for="valorVenda">Valor Venda</label>
+                                        <input type="text" name="valorVenda" id="valorVenda"
+                                            class="form-control" placeholder="Digite o valor de venda da bebida">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="dataValidade">Data Validade</label>
+                                        <input type="date" name="dataValidade" id="dataValidade"
+                                            class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="desc">Descrição do Bebida</label>
+                                        <textarea name="desc" id="desc" cols="30" rows="10"
+                                            class="form-control"
+                                            placeholder="Digite a descrição bebida"></textarea>
+                                    </div>
+                                    
                                     <hr>
                                     <div class="row pt-2 pt-sm-5 mt-1">
                                         <div class="col-sm-6 pb-2 pb-sm-4 pb-lg-0 pr-0">
