--- a/views/partials/_sidebarDashboard.handlebars
+++ b/views/partials/_sidebarDashboard.handlebars
@@ -95,11 +95,17 @@
                                             <a class="nav-link" href="/add/produto">Adionar Produto<span class="badge badge-secondary">New</span></a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/addProd/views-produtos">Produtos Cadastrados</a>
+                                            <a class="nav-link" href="/hotdog/add">Adionar HotDog</a>
+                                        </li> 
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/add/views-produtos">Produtos Cadastrados</a>
                                         </li>                                         
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/addProd/views-aperitivos">Aperitivos Cadastrados</a>
-                                        </li>                                                                               
+                                            <a class="nav-link" href="/add/views-aperitivos">Aperitivos Cadastrados</a>
+                                        </li>  
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/hotdog/views">Hot-dog Cadastrados</a>
+                                        </li>                                                                              
                                     </ul>
                                 </div>
                             </li>
