formatando codigos em MVC

--- a/views/add/addAperitivo.handlebars
+++ b/views/add/addAperitivo.handlebars
@@ -38,7 +38,7 @@
                     <!-- horizontal form -->
                     <!-- ============================================================== -->
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <form action="/add/aperitivo" method="post">
+                        <form action="/aperitivos/cadastrar" method="post">
                             <div class="card">
                                 <h5 class="card-header">Cadastro do Produto Aperitivo</h5>
                                 <div class="card-body">
@@ -88,7 +88,7 @@
                     <!-- end horizontal form -->
                     <!-- ============================================================== -->
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <form action="/add/opcAperitivo" method="post">
+                        <form action="/aperitivos/cadastrar_opc" method="post">
                             <div class="card">
                                 <h5 class="card-header">Opções Aperitivos</h5>
                                 <div class="card-body">
