--- a/views/edit-prod/editAperitivo.handlebars
+++ b/views/edit-prod/editAperitivo.handlebars
@@ -39,7 +39,7 @@
 
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                 {{#each aperitivos}}
-                <form action="/add/editAperitivo" method="post">
+                <form action="/aperitivos/edit" method="post">
                     <div class="card">
                         <input type="hidden" value="{{dataValues.id}}">
                         <h5 class="card-header">Cadastro do Produto Aperitivo</h5>
