--- a/views/partials/_sidebarDashboard.handlebars
+++ b/views/partials/_sidebarDashboard.handlebars
@@ -86,7 +86,7 @@
                                 <div id="submenu-4" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/add/aperitivo">Adionar Aperitivos<span class="badge badge-secondary">New</span></a>
+                                            <a class="nav-link" href="/aperitivos/add">Adionar Aperitivos<span class="badge badge-secondary">New</span></a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="/add/bebidas">Adionar Bebidas<span class="badge badge-secondary">New</span></a>
@@ -101,7 +101,7 @@
                                             <a class="nav-link" href="/add/views-produtos">Produtos Cadastrados</a>
                                         </li>                                         
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/add/views-aperitivos">Aperitivos Cadastrados</a>
+                                            <a class="nav-link" href="/aperitivos/views">Aperitivos Cadastrados</a>
                                         </li>  
                                         <li class="nav-item">
                                             <a class="nav-link" href="/hotdog/views">Hot-dog Cadastrados</a>
