--- a/views/vis-prod/vis-aperitivo.handlebars
+++ b/views/vis-prod/vis-aperitivo.handlebars
@@ -49,7 +49,7 @@
                                         <th scope="col">valor</th>
                                         <th scope="col">descrição</th>
                                         <th scope="col">
-                                            <a href="/add/edit-aperitivo">
+                                            <a href="/aperitivos/edit">
                                                 <button class="btn btn-info">Editar</button>
                                             </a>
                                         </th>
