--- a/views/partials/_sidebarDashboard.handlebars
+++ b/views/partials/_sidebarDashboard.handlebars
@@ -63,6 +63,9 @@
                                 <div id="submenu-2" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                          <li class="nav-item">
+                                            <a class="nav-link" href="/clientes">Cadastrar Cliente</a>
+                                        </li>
+                                         <li class="nav-item">
                                             <a class="nav-link" href="/pedido">Montar Pedido</a>
                                         </li>
                                         <li class="nav-item">
